--- a/html-css/hc13_Bootstrap/installation/local.html
+++ b/html-css/hc13_Bootstrap/installation/local.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/lib/bootstrap-5.3.2-dist/css/bootstrap.css">
 </head>
 <body>
-    <h1>Bootstrap Local'de Kullanma</h1>
+    <h1 class="text-center bg-primary text-warning mt-5">Bootstrap Local'de Kullanma</h1>
 
 
 
