--- a/html-css/hc13_Bootstrap/installation/1_intro.html
+++ b/html-css/hc13_Bootstrap/installation/1_intro.html
@@ -7,9 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="text-center bg-dark text-white">CDN!</h1>
+    <h1 class="text-center bg-success text-light">İntro!</h1>
 
-    
+    <p class="h1">Lorem ipsum dolor sit amet.</p>
+    <p class="h2">Lorem ipsum dolor sit amet.</p>
+    <p class="h3">Lorem ipsum dolor sit amet.</p>
+    <p class="h4">Lorem ipsum dolor sit amet.</p>
+    <p class="h5">Lorem ipsum dolor sit amet.</p>
+    <p class="h6">Lorem ipsum dolor sit amet.</p>
+
+    <p class="display-1">Lorem ipsum dolor sit.</p>
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
