--- a/html-css/hc13_Bootstrap/installation/1_intro.html
+++ b/html-css/hc13_Bootstrap/installation/1_intro.html
@@ -17,6 +17,22 @@
     <p class="h6">Lorem ipsum dolor sit amet.</p>
 
     <p class="display-1">Lorem ipsum dolor sit.</p>
+    <p class="display-2">Lorem ipsum dolor sit.</p>
+    <p class="display-3">Lorem ipsum dolor sit.</p>
+    <p class="display-4">Lorem ipsum dolor sit.</p>
+    <p class="display-5">Lorem ipsum dolor sit.</p>
+    <p class="display-6">Lorem ipsum dolor sit.</p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore possimus eveniet quod mollitia, culpa deleniti? <span class="fs-5 text-danger"> Quo ipsa nam modi voluptates consequuntur,</span> soluta deserunt nisi rem iure! Neque veritatis fugiat ut!
+    </p>
+
+    <p>Lorem ipsum <span class="text-muted"> dolor sit amet consectetur</span> adipisicing elit. Adipisci, aspernatur?
+    </p>
+    <p class="text-decoration-underline">Lorem ipsum <span class="lead"> dolor sit amet consectetur</span> adipisicing elit. Adipisci, aspernatur?
+    </p>
+    <p class="text-decoration-line-through">Lorem ipsum dolor <span class="text-danger fw-bolder fst-italic"> sit amet consectetur</span> adipisicing elit. Atque, iste?        
+    </p>
 
 
 
