--- a/html-css/hc13_Bootstrap/installation/1_intro.html
+++ b/html-css/hc13_Bootstrap/installation/1_intro.html
@@ -7,21 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="text-center bg-success text-light">İntro!</h1>
+    <h1 class="text-center bg-success text-light container-fluid">İntro!</h1>
 
-    <p class="h1">Lorem ipsum dolor sit amet.</p>
-    <p class="h2">Lorem ipsum dolor sit amet.</p>
+    <p class="h1 text-primary">Lorem ipsum dolor sit amet.</p>
+    <p class="h2 text-danger">Lorem ipsum dolor sit amet.</p>
     <p class="h3">Lorem ipsum dolor sit amet.</p>
     <p class="h4">Lorem ipsum dolor sit amet.</p>
     <p class="h5">Lorem ipsum dolor sit amet.</p>
     <p class="h6">Lorem ipsum dolor sit amet.</p>
 
-    <p class="display-1">Lorem ipsum dolor sit.</p>
-    <p class="display-2">Lorem ipsum dolor sit.</p>
-    <p class="display-3">Lorem ipsum dolor sit.</p>
-    <p class="display-4">Lorem ipsum dolor sit.</p>
-    <p class="display-5">Lorem ipsum dolor sit.</p>
-    <p class="display-6">Lorem ipsum dolor sit.</p>
+    <p class="display-1 bg-primary">Lorem ipsum dolor sit.</p>
+    <p class="display-2 bg-secondary">Lorem ipsum dolor sit.</p>
+    <p class="display-3 bg-success">Lorem ipsum dolor sit.</p>
+    <p class="display-4 bg-danger">Lorem ipsum dolor sit.</p>
+    <p class="display-5 bg-warning">Lorem ipsum dolor sit.</p>
+    <p class="display-6 bg-info">Lorem ipsum dolor sit.</p>
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore possimus eveniet quod mollitia, culpa deleniti? <span class="fs-5 text-danger"> Quo ipsa nam modi voluptates consequuntur,</span> soluta deserunt nisi rem iure! Neque veritatis fugiat ut!
@@ -33,11 +33,71 @@
     </p>
     <p class="text-decoration-line-through">Lorem ipsum dolor <span class="text-danger fw-bolder fst-italic"> sit amet consectetur</span> adipisicing elit. Atque, iste?        
     </p>
+    <p class="bg-primary lh-lg w-50 mx-auto">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate reiciendis, maxime veritatis quos alias excepturi dolorem ducimus fugiat nobis deserunt, accusantium inventore sequi? Repellat blanditiis libero vitae quidem similique sapiente!
+    </p>
+    <figure class="text-end">
+        <blockquote class="blockquote">
+          <p>Yakarsa Dünyayı Garipler Yakar </p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Müslüm Gürses <cite title="Source Title">Adana</cite>
+        </figcaption>
+      </figure>
+
+<!-- <p class="text-primary">.text-primary</p>
+<p class="text-primary-emphasis">.text-primary-emphasis</p>
+<p class="text-secondary">.text-secondary</p>
+<p class="text-secondary-emphasis">.text-secondary-emphasis</p>
+<p class="text-success">.text-success</p>
+<p class="text-success-emphasis">.text-success-emphasis</p>
+<p class="text-danger">.text-danger</p>
+<p class="text-danger-emphasis">.text-danger-emphasis</p>
+<p class="text-warning bg-dark">.text-warning</p>
+<p class="text-warning-emphasis">.text-warning-emphasis</p>
+<p class="text-info bg-dark">.text-info</p>
+<p class="text-info-emphasis">.text-info-emphasis</p>
+<p class="text-light bg-dark">.text-light</p>
+<p class="text-light-emphasis">.text-light-emphasis</p>
+<p class="text-dark bg-white">.text-dark</p>
+<p class="text-dark-emphasis">.text-dark-emphasis</p>
+
+<p class="text-body">.text-body</p>
+<p class="text-body-emphasis">.text-body-emphasis</p>
+<p class="text-body-secondary">.text-body-secondary</p>
+<p class="text-body-tertiary">.text-body-tertiary</p>
+
+<p class="text-black bg-white">.text-black</p>
+<p class="text-white bg-dark">.text-white</p>
+<p class="text-black-50 bg-white">.text-black-50</p>
+<p class="text-white-50 bg-dark">.text-white-50</p> -->
+
+
+<div class="bg-primary mx-auto w-25 p-3 mb-2">Width 25%</div>
+<div class="bg-primary mx-auto w-50 p-3">Width 50%</div>
+<div class="bg-primary mx-auto w-75 p-3">Width 75%</div>
+<div class="bg-primary mx-auto w-100 p-3">Width 100%</div>
+<div class="bg-primary mx-auto w-auto p-3">Width auto</div>
+
+<button class="btn btn-danger px-5">Tıkla</button>
+
+<p class="border border-danger border-5 w-50 mx-auto m-3 p-4 rounded-circle text-center bg-dark text-warning">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat maxime voluptas ad ipsam sint quo a sunt aperiam mollitia quas nesciunt quis aliquid itaque adipisci minima provident, nulla nemo quos.
+</p>
+
+<button type="button" class="btn btn-outline-primary">Primary</button>
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<button type="button" class="btn btn-outline-success">Success</button>
+<button type="button" class="btn btn-outline-danger">Danger</button>
+<button type="button" class="btn btn-outline-warning">Warning</button>
+<button type="button" class="btn btn-outline-info">Info</button>
+<button type="button" class="btn btn-outline-light">Light</button>
+<button type="button" class="btn btn-outline-dark">Dark</button>
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
