--- a/html-css/hc13_Bootstrap/installation/2_grid.html
+++ b/html-css/hc13_Bootstrap/installation/2_grid.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="bg-primary text-warning text-center display-4">Grid!</h1>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="bg-danger col-3">3</div>
             <div class="bg-warning col-9">9</div>
@@ -18,6 +18,21 @@
             <div class="col bg-warning">b</div>
             <div class="col bg-secondary">c</div>      
                    
+        </div>
+    </div> -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6 bg-primary">6</div>
+            <div class="col-6 bg-danger">6</div>
+            <div class="col-3 bg-success">3</div>
+            <div class="col-9 bg-warning">9</div>
+            <div class="col-3 bg-secondary">3</div>
+            <div class="col-6 bg-primary">6</div>
+            <div class="col-3 bg-danger">3</div>
+            <div class="col-4 bg-primary">4</div>
+            <div class="col-4 bg-danger">4</div>
+            <div class="col-4 bg-success">4</div>
         </div>
     </div>
 
