--- a/html-css/hc13_Bootstrap/installation/2_grid.html
+++ b/html-css/hc13_Bootstrap/installation/2_grid.html
@@ -34,6 +34,23 @@
             <div class="col-4 bg-danger">4</div>
             <div class="col-4 bg-success">4</div>
         </div>
+
+        <div class="row mt-5 bg-secondary justify-content-center align-items-center" style="height: 100px;">
+            <div class="col-3 bg-dark text-light">3</div>
+            <div class="col-3 bg-danger text-light">3</div>
+        </div>
+        <div class="row mt-5 bg-secondary justify-content-evenly align-items-center" style="height: 100px;">
+            <div class="col-3 bg-dark text-light">3</div>
+            <div class="col-3 bg-danger text-light">3</div>
+        </div>
+        <div class="row mt-5 bg-secondary justify-content-around align-items-center" style="height: 100px;">
+            <div class="col-3 bg-dark text-light">3</div>
+            <div class="col-3 bg-danger text-light">3</div>
+        </div>
+        <div class="row mt-5 bg-secondary justify-content-between align-items-center" style="height: 100px;">
+            <div class="col-3 bg-dark text-light">3</div>
+            <div class="col-3 bg-danger text-light">3</div>
+        </div>
     </div>
 
 
