--- a/html-css/hc13_Bootstrap/installation/2_grid.html
+++ b/html-css/hc13_Bootstrap/installation/2_grid.html
@@ -21,7 +21,7 @@
         </div>
     </div> -->
 
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-6 bg-primary">6</div>
             <div class="col-6 bg-danger">6</div>
@@ -35,7 +35,7 @@
             <div class="col-4 bg-success">4</div>
         </div>
 
-        <div class="row mt-5 bg-secondary justify-content-center align-items-center" style="height: 100px;">
+        <!-- <div class="row mt-5 bg-secondary justify-content-center align-items-center" style="height: 100px;">
             <div class="col-3 bg-dark text-light">3</div>
             <div class="col-3 bg-danger text-light">3</div>
         </div>
@@ -50,8 +50,22 @@
         <div class="row mt-5 bg-secondary justify-content-between align-items-center" style="height: 100px;">
             <div class="col-3 bg-dark text-light">3</div>
             <div class="col-3 bg-danger text-light">3</div>
-        </div>
+        </div> -->
     </div>
+
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2 bg-danger">sevgi</div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2 bg-primary">sevgi</div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2 bg-warning">sevgi</div>
+        <div class="col-12 col-sm-6 col-md-3 col-lg-2 bg-success">sevgi</div>
+    </div>
+
+    <!-- Sadece xs ekranlarda gözükecek bir element tasarlayınız.
+      Sadece xs ekranlarda gözükmeyecek bir element tasarlayınız.
+      Sadece md ekranlarda gözükecek bir element tasarlayınız.
+      Sadece md ekranlarda gözükmeyecek bir element tasarlayınız.
+      Sadece md+ ekranlarda gözükecek bir element tasarlayınız.
+       -->
 
 
 
