--- a/html-css/hc13_Bootstrap/installation/2_grid.html
+++ b/html-css/hc13_Bootstrap/installation/2_grid.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="bg-primary text-warning text-center display-4">Grid!</h1>
+    <h1 class="bg-primary text-warning text-center display-4 sevgi">Grid!</h1>
 
     <!-- <div class="container">
         <div class="row">
@@ -66,6 +67,21 @@
       Sadece md ekranlarda gözükmeyecek bir element tasarlayınız.
       Sadece md+ ekranlarda gözükecek bir element tasarlayınız.
        -->
+
+       <div class="container">
+        <div class="row">
+            <div class="bg-primary d-sm-none">Sadece XS</div>
+            <div class="bg-danger d-none d-sm-block">XS Haric hepsinde gozuk</div>
+            <div class="bg-success d-none d-md-block d-lg-none">Sadece MD</div>
+            <div class="bg-secondary d-none d-lg-block">MD +</div>
+        </div>
+       </div>
+
+       <div class="row justify-content-center">
+        <div class="col-12 col-md-6 col-lg-4 bg-warning">a</div>
+        <div class="col-12 col-md-6 col-lg-4 bg-primary">b</div>
+        <div class="col-12 col-md-6 col-lg-4 bg-secondary">c</div>
+       </div>
 
 
 
