--- a/html-css/hc14_Bootstrap-Project/index.html
+++ b/html-css/hc14_Bootstrap-Project/index.html
@@ -56,7 +56,7 @@
               <div class="carousel-item active">
                 <img src="./img/slider1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
+                  <h5>Popular Education</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                   <div>
                     <button class="btn btn-danger">Start Now</button>
@@ -67,7 +67,7 @@
               <div class="carousel-item">
                 <img src="./img/slider2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
+                  <h5>Succesful Future</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                   <div>
                     <button class="btn btn-danger">Start Now</button>
@@ -78,7 +78,7 @@
               <div class="carousel-item">
                 <img src="./img/slider3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
+                  <h5>Dream Job</h5>
                   <p>Some representative placeholder content for the third slide.</p>
                   <div>
                     <button class="btn btn-danger">Start Now</button>
