--- a/html-css/hc14_Bootstrap-Project/index.html
+++ b/html-css/hc14_Bootstrap-Project/index.html
@@ -55,7 +55,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./img/slider1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5>Popular Education</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                   <div>
@@ -66,7 +66,7 @@
               </div>
               <div class="carousel-item">
                 <img src="./img/slider2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5>Succesful Future</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                   <div>
@@ -77,7 +77,7 @@
               </div>
               <div class="carousel-item">
                 <img src="./img/slider3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5>Dream Job</h5>
                   <p>Some representative placeholder content for the third slide.</p>
                   <div>
@@ -95,8 +95,129 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>    
+          </div>
+        
+        <!-- MAIN -->  
 
+    <main class="text-center bg-light container">
+        <!-- about -->
+        <section id="about" class="p-3">
+            <h2 class="display-6 text-danger">ABOUT US</h2>
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <i class="fas fa-globe-americas fa-2x"></i>
+                    <h4>Online Courses</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique excepturi voluptatum earum laudantium facere delectus nobis assumenda illo aperiam dolores!</p>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <i class="fas fa-headset fa-2x"></i>
+                    <h4>Fulltime Mentoring</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique excepturi voluptatum earum laudantium facere delectus nobis assumenda illo aperiam dolores!</p>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <i class="fas fa-book-open fa-2x"></i>
+                    <h4>Learn Yourself</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique excepturi voluptatum earum laudantium facere delectus nobis assumenda illo aperiam dolores!</p>
+                </div>
+            </div>
+        </section>
+        <!-- instructors -->
+        <section id="instructors" class="bg-dark p-3 container">
+            <h2 class="text-danger display-6">OUR INSTRUCTORS</h2>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Josh Ren</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Bob Ken</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Jessica Sunny</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Jonny Came</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Osho</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+                    <div class="card">
+                        <img src="./img/teacher6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Brandon White</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="text-danger d-flex justify-content-evenly fa-2x">
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-square-x-twitter"></i>
+                            <i class="fa-brands fa-google-plus-square"></i>
+                        </div>  
+                        </div>
+                      </div> 
+                </div>
+            </div>
+        </section>
+    </main>    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
