--- a/html-css/hc14_Bootstrap-Project/index.html
+++ b/html-css/hc14_Bootstrap-Project/index.html
@@ -124,7 +124,7 @@
         <!-- instructors -->
         <section id="instructors" class="bg-dark p-3 container">
             <h2 class="text-danger display-6">OUR INSTRUCTORS</h2>
-            <div class="row">
+            <div class="row justify-content-center g-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                     <div class="card">
                         <img src="./img/teacher1.jpg" class="card-img-top" alt="...">
