--- a/html-css/hc14_Bootstrap-Project/index.html
+++ b/html-css/hc14_Bootstrap-Project/index.html
@@ -220,6 +220,19 @@
 
         <!-- students -->
 
+        <section id="student" class="bg-light p-3 container">
+          <h2 class="text-danger display-6">OUR STUDENTS</h2>
+          <div class="row align-items-center">
+            <div class="col-12 col-md-6">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores temporibus deserunt consequatur facilis! Nemo est recusandae et, quo perspiciatis nostrum hic placeat voluptates suscipit commodi illo tempore cum possimus minus!</p>
+              <button class="btn btn-danger">Learn More</button>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="./img/students1.png" width="70%" alt="">
+            </div>
+          </div>
+        </section>
+
 
     </main>    
 
