--- a/javascript/js12_dom-intro/index.html
+++ b/javascript/js12_dom-intro/index.html
@@ -26,9 +26,9 @@
           </ul>
         </section>
       </main>
-      
-
   
-      <script src="selectors.js"></script>
+      <!-- <script src="selectors.js"></script> -->
+      <script src="traversingDOM.js"></script>
+
 </body>
 </html>
