--- a/javascript/js13_createElement-events/index.html
+++ b/javascript/js13_createElement-events/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-13 Create Node-Events</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="header"><h1>DOM SELECTORS</h1></header>
