--- a/javascript/js13_createElement-events/index.html
+++ b/javascript/js13_createElement-events/index.html
@@ -33,6 +33,7 @@
       </section>
     </main>
 
-    <script src="createNode.js"></script>
+    <!-- <script src="createNode.js"></script> -->
+    <script src="event.js"></script>
 </body>
 </html>
