--- a/javascript/js14_DOM-project-Checkout-page/index.html
+++ b/javascript/js14_DOM-project-Checkout-page/index.html
@@ -15,7 +15,18 @@
         <div class="number">?</div>
     </header>
 
-    <main></main>
+    <main>
+        <section class="left">
+            <input type="number" class="guess">
+            <button class="btn check">Check</button>
+        </section>
+
+        <section class="right">
+            <p class="msg">Oyun Başlıyor...</p>
+            <p class="score-label">💯Score : <span class="score">10</span></p>
+            <p class="top-score-label">🥇Top-Score : <span class="top-score">0</span></p>
+        </section>
+    </main>
 
 
     <script src="game.js"></script>
