--- a/javascript/js14_DOM-project-Checkout-page/index.html
+++ b/javascript/js14_DOM-project-Checkout-page/index.html
@@ -29,7 +29,8 @@
     </main>
 
 
-    <script src="game.js"></script>
+    <!-- <script src="game.js"></script> -->
+    <script src="gamestorage.js"></script>
     
 </body>
 </html>
