--- a/javascript/js15_checkout-app/checkout.html
+++ b/javascript/js15_checkout-app/checkout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -118,6 +119,8 @@
         </div>
       </section>
     </main>
+
+    <script src="checkout.js"></script>
     
     
 </body>
