--- a/javascript/js15_checkout-app/bubling-capturing/index.html
+++ b/javascript/js15_checkout-app/bubling-capturing/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Bubling-Capturing</title>
 </head>
 <body>
@@ -14,8 +15,8 @@
         <p>P</p>
       </div>
     </form>
-    <!-- <script src="bubling.js"></script> -->
-    <script src="capturing.js"></script>
+    <script src="bubling.js"></script>
+    <!-- <script src="capturing.js"></script> -->
     
 </body>
 </html>
