--- a/javascript/js15_checkout-app/bubling-capturing/index.html
+++ b/javascript/js15_checkout-app/bubling-capturing/index.html
@@ -15,8 +15,8 @@
         <p>P</p>
       </div>
     </form>
-    <script src="bubling.js"></script>
-    <!-- <script src="capturing.js"></script> -->
+    <!-- <script src="bubling.js"></script> -->
+    <script src="capturing.js"></script>
     
 </body>
 </html>
