--- a/javascript/js15_checkout-app/checkout.html
+++ b/javascript/js15_checkout-app/checkout.html
@@ -69,12 +69,12 @@
             </div>
           </div>
           <div class="product">
-            <figure><img src="./img/keyboard.jpg" alt="img" /></figure>
+            <figure><img src="./img/mouse.jpg" alt="img" /></figure>
             <div class="product-info">
-              <h2>Apple Keyboard</h2>
+              <h2>Apple Mouse</h2>
               <div class="product-prices">
-                <strong class="dollar" id="discounted-price">185.99</strong>
-                <span class="line-through dollar">199.99</span>
+                <strong class="dollar" id="discounted-price">89.99</strong>
+                <span class="line-through dollar">99.99</span>
               </div>
               <div class="buttons-div">
                 <div>
