--- a/html-css/hc15-sass_intro/index.html
+++ b/html-css/hc15-sass_intro/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Sass Intro</title>
 </head>
 <body>
 
     <header>
         <div>
-          <img src="./images/sass.png" width="80px" alt="" />
+          <img src="./images/sass.png" alt="" />
         </div>
         <nav>
           <ul>
