--- a/javascript/js17_async1/index.html
+++ b/javascript/js17_async1/index.html
@@ -9,7 +9,8 @@
     <header><h2>JS17 - ASYNC-1</h2></header>
 
     <section id="users"></section>
-    <script src="1-intro.js"></script>
+    <!-- <script src="1-intro.js"></script> -->
+    <script src="2-promise.js"></script>
     
 </body>
 </html>
