--- a/javascript/js18_async2/index.html
+++ b/javascript/js18_async2/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
     <header><h2>JS-18 - ASYNC-2</h2></header>
+    <section>
+      <h1>TOP-HEADINGS</h1>
+      <div id="news-div"></div>
+    </section>
 
 
     <script src="async-await.js"></script>
