--- a/javascript/js18_async2/index.html
+++ b/javascript/js18_async2/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header><h2>JS-18 - ASYNC-2</h2></header>
-    <section>
-      <h1>TOP-HEADINGS</h1>
-      <div id="news-div"></div>
+    <section class="container">
+      <h1 class="text-center m-4">TOP-HEADINGS</h1>
+      <div id="news-div" class="row justify-content-center align-content-center g-3"></div>
     </section>
 
 
