--- a/javascript/js20_coinApp/coin-app-inClass/index.html
+++ b/javascript/js20_coinApp/coin-app-inClass/index.html
@@ -1,13 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Crypto Coin App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+  <body class="container">
+    <header>
+      <h1>Crypto Coin App</h1>
+      <form>
+        <input type="text" placeholder="Search for a coin" autofocus />
+        <button type="submit">SEARCH</button>
+      </form>
+    </header>
+    <main>
+      <ul class="coins"></ul>
+    </main>
+    <footer>
+      <small>Coded by <span>❤</span>FullStack Team </small>
+    </footer>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
