--- a/javascript/projects/08-M1-Shopping/index.html
+++ b/javascript/projects/08-M1-Shopping/index.html
@@ -16,6 +16,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+        .line-clamp-2 {
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient : vertical;
+          overflow: hidden;
+        }
+      </style>
     <title>Shopping</title>
 </head>
 <body>
