--- a/html-css/hc03_CSS-Intro(Selectots,Colors,Border)/css-intro.html
+++ b/html-css/hc03_CSS-Intro(Selectots,Colors,Border)/css-intro.html
@@ -12,9 +12,9 @@
             background-color: darkorange;
         }
 
-        #par3{
+        /* #par3{
             background-color: magenta;
-        }
+        } */
 
         h1{
             color: red;
