--- a/html-css/hc03_CSS-Intro(Selectots,Colors,Border)/border.html
+++ b/html-css/hc03_CSS-Intro(Selectots,Colors,Border)/border.html
@@ -13,6 +13,7 @@
     <p id="par3">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p id="par4">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p id="par5">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <p id="par6">Lorem ipsum dolor sit amet.</p>
     
 </body>
 </html>
