--- a/html-css/hc05_List,Links,GoogleFonts,Fontawesome/index.html
+++ b/html-css/hc05_List,Links,GoogleFonts,Fontawesome/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>LIST</h1>
 
+    <h2>Languages</h2>
     <ul class="languages">
         <li>JavaScript</li>
         <li>C++</li>
@@ -52,9 +53,9 @@
     <h2>LINKS</h2>
     <br>
     <nav class="link">
-        <a href="">Home</a>
-        <a href="">Products</a>
-        <a href="">Portfolio</a>
+        <a href="#aa">Home</a>
+        <a href="#bb">Products</a>
+        <a href="#cc">Portfolio</a>
     </nav>
     <br><br><br><br>
 
