nth child before after

--- a/html-css/hc05_List,Links,GoogleFonts,Fontawesome/index.html
+++ b/html-css/hc05_List,Links,GoogleFonts,Fontawesome/index.html
@@ -72,7 +72,7 @@
     <p id="par">Lorem ipsum dolor sit amet.</p>
 
 
-    <h2>PSEUDO ELEMENTLER</h2>
+    <h2>PSEUDO ELEMENTS</h2>
 
     <p class="p-elements">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos labore placeat corporis est quisquam explicabo laboriosam enim. Culpa minus cumque libero sunt suscipit, reiciendis totam porro inventore officiis, voluptas rerum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat animi omnis praesentium? Maxime officiis voluptatum dicta adipisci enim rem. Ad recusandae doloremque soluta assumenda maxime quisquam perferendis quae quam beatae.
